--- a/main.html
+++ b/main.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Student Body Example</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Welcome to My Web Page</h1>
+    <p>This is a student-generated body section.</p>
+    <p>Here, you can include any content like text, images, or links to meet your requirements.</p>
 
+    <!-- Example of an image -->
+    <img src="example-image.jpg" alt="Example Image" width="400">
+
+    <!-- Example of a link -->
+    <a href="https://www.example.com" target="_blank">Visit Example</a>
+
+    <!-- Example of a list -->
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+    <!-- Example of a table -->
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td>Jane</td>
+                <td>30</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!-- Example of a button -->
+    <button onclick="alert('Button Clicked!')">Click Me</button>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
