--- a/main.html
+++ b/main.html
@@ -5,49 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Student Body Example</title>
+    <title>Time and Space Complexity</title>
 </head>
 
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a student-generated body section.</p>
-    <p>Here, you can include any content like text, images, or links to meet your requirements.</p>
+    <h1>Understanding Time, Space, and Complexity</h1>
 
-    <!-- Example of an image -->
-    <img src="example-image.jpg" alt="Example Image" width="400">
+    <p>Time complexity is a measure of the computational effort required by an algorithm to solve a problem as a function of the input size. It helps determine how efficient an algorithm is, particularly when dealing with large datasets.</p>
 
-    <!-- Example of a link -->
-    <a href="https://www.example.com" target="_blank">Visit Example</a>
-
-    <!-- Example of a list -->
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
-
-    <!-- Example of a table -->
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>John</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <td>Jane</td>
-                <td>30</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <!-- Example of a button -->
-    <button onclick="alert('Button Clicked!')">Click Me</button>
+    <p><b>Space Complexity</b> refers to the amount of memory an algorithm requires to execute relative to the input size. For instance, an algorithm with a space complexity of O(n) scales linearly with the size of the input.</p>
 
     <script type="text/javascript" src="./script.js"></script>
 </body>
